hphp/test/zend/good/Zend/tests/function_arguments_002.php.expectf

Fatal error: Encountered unexpected token '/'. in %s/function_arguments_002.php on line 2
